Stegosaurus jahdattavaolento luokka tehty (ei sisällä vielä mitään). Android launcheriin resolveriin ja connecting serviceen tehty muutoksia siten että laite ottaa yhteyttä wahoon sensoriin

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -20,6 +20,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service
+            android:directBootAware="true"
+            android:enabled="true"
+            android:exported="false"
+
+            android:isolatedProcess="false"
+            android:label="string resource"
+            android:name=".ConnectingService"
+            android:permission="string"
+            android:process="com.mygdx.game" >
+            . . .
+        </service>
     </application>
 
 
