Uusi kentäntekotyökalu lukee SVG-tiedostoja

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -6,4 +6,8 @@ eclipse.project {
     name = appName + "-core"
 }
 dependencies {
+    implementation project(':batik-parser-1.11')
+    implementation project(':batik-transcoder-1.11')
+    implementation project(':batik-i18n-1.11')
+    implementation project(':batik-util-1.11')
 }
