--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':fitness'
+include ':fitness', ':batik-parser-1.11', ':batik-transcoder-1.11', ':batik-i18n-1.11', ':batik-util-1.11'
 include 'desktop', 'android', 'ios', 'core', ':wahoo_fitness_android_api_1.8.2.0'
