--- a/android/assets/MyBundle.properties
+++ b/android/assets/MyBundle.properties
@@ -4,3 +4,8 @@ quit=Quit
 affirmative=Yes
 negative=No
 quitConfirmText=Quit the game?
+level=Level
+yourTime=Your time:
+continue=Continue
+retry=Retry
+loseMessage=You lost the game!
