WorldSelectScreen ja NewScreenistä extendaavia siistitty

--- a/android/assets/MyBundle.properties
+++ b/android/assets/MyBundle.properties
@@ -11,3 +11,8 @@ retry=Retry
 loseMessage=You lost the game!
 mainmenu=Main Menu
 paused=Paused
+worldSelect=World Select
+world1=ph:world1
+world2=ph:world2
+world3=ph:world3
+world4=ph:world4
