ConnectScreen päivitetty: Ulkoasu + Skip-painike

--- a/android/assets/MyBundle.properties
+++ b/android/assets/MyBundle.properties
@@ -16,3 +16,8 @@ world1=ph:world1
 world2=ph:world2
 world3=ph:world3
 world4=ph:world4
+scanDevices=Scan devices
+startScan=Start the scan
+scanning=Scanning
+allowLocationData=Please allow the use of location data from the settings
+skip=Skip
