Musiikit ja äänet takas

--- a/android/assets/MyBundle.properties
+++ b/android/assets/MyBundle.properties
@@ -18,6 +18,6 @@ world3=ph:world3
 world4=ph:world4
 scanDevices=Scan devices
 startScan=Start the scan
-scanning=Scanning
+scanning=Scanning...
 allowLocationData=Please allow the use of location data from the settings
 skip=Skip
