--- a/android/assets/MyBundle.properties
+++ b/android/assets/MyBundle.properties
@@ -21,3 +21,4 @@ startScan=Start the scan
 scanning=Scanning...
 allowLocationData=Please allow the use of location data from the settings
 skip=Skip
+scanEnd=Scan Ended
