package uudelleen nimetty

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mygdx.game" >
+    package="com.tamk.jdce" >
 
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
@@ -25,7 +25,7 @@
         android:label="@string/app_name"
         android:theme="@style/GdxTheme" >
         <activity
-            android:name="com.mygdx.game.AndroidLauncher"
+            android:name="com.tamk.jdce.fi.tamk.jdce.AndroidLauncher"
             android:label="@string/app_name" 
             android:screenOrientation="landscape"
             android:configChanges="keyboard|keyboardHidden|navigation|orientation|screenSize|screenLayout">
@@ -48,7 +48,7 @@
         </service>
 
         <service
-            android:name=".ThingyService"
+            android:name="com.tamk.jdce.fi.tamk.jdce.ThingyService"
             android:exported="false" />
     </application>
 
