--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,7 +17,7 @@ android {
         exclude 'META-INF/robovm/ios/robovm.xml'
     }
     defaultConfig {
-        applicationId "com.mygdx.game"
+        applicationId "fi.tamk.jdce"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
