--- a/android/assets/MyBundle.properties
+++ b/android/assets/MyBundle.properties
@@ -22,3 +22,5 @@ scanning=Scanning...
 allowLocationData=Please allow the use of location data from the settings
 skip=Skip
 scanEnd=No devices
+nameText=Name
+maxChars=Max 10 characters
