--- a/android/assets/MyBundle.properties
+++ b/android/assets/MyBundle.properties
@@ -24,3 +24,5 @@ skip=Skip
 scanEnd=No devices
 nameText=Name
 maxChars=Max 10 characters
+highscoreMessagePersonal=You made it to your personal top10!
+highscoreMessageWorld=You made it to world's top10!
