Highscoreviestit näytetään. Mahdollisuus skipata nettiin yhdistäminen. Highscoreruudussa paikka globaalille highsocrellekin

--- a/android/assets/MyBundle.properties
+++ b/android/assets/MyBundle.properties
@@ -24,5 +24,6 @@ skip=Skip
 scanEnd=No devices
 nameText=Name
 maxChars=Max 10 characters
-highscoreMessagePersonal=You made it to your personal top10!
-highscoreMessageWorld=You made it to world's top10!
+highscoreMessagePersonal=You made it to your personal top 10!
+highscoreMessageWorld=You made it to world's top 10!
+connectingHS= checking world's top 10
