highscoreskippausehkäkorjattu peli ei saa serveriltä highsocretietoja syystäx

--- a/android/assets/MyBundle.properties
+++ b/android/assets/MyBundle.properties
@@ -27,3 +27,5 @@ maxChars=Max 10 characters
 highscoreMessagePersonal=You made it to your personal top 10!
 highscoreMessageWorld=You made it to world's top 10!
 connectingHS= checking world's top 10
+global=World
+local=Personal
