--- a/android/assets/MyBundle.properties
+++ b/android/assets/MyBundle.properties
@@ -11,7 +11,7 @@ retry=Retry
 loseMessage=You lost the game!
 mainmenu=Main Menu
 paused=Paused
-worldSelect=World Select
+worldSelect=Select World: 
 world1=ph:world1
 world2=ph:world2
 world3=ph:world3
